Centered see code button

--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
 								<li class="icon solid fa-camera-retro">
 									<h3>YOLOv4 with TensorRT acceleration</h3>
 									<p>Utilizing YOLOv4 object detector with TensorRT acceleration and integrating it into ROS for real-time object recognition. </p>
-									<p style="margin-left:50px;"><a href="https://github.com/indra4837/yolov4_trt_ros" class="button">See code</a>
+									<p style="text-align: center;"><a href="https://github.com/indra4837/yolov4_trt_ros" class="button">See code</a>
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>System Health Monitoring in ROS</h3>
 									<p>A health monitoring system that monitors state of nodes and publishing rates of nodes. Warnings are then published if required.</p>
-									<p style="margin-left:50px;"><a href="https://github.com/indra4837/system_health_monitor" class="button">See code</a>
+									<p style="text-align: center;"><a href="https://github.com/indra4837/system_health_monitor" class="button">See code</a>
 								</li>
 								<li class="icon solid fa-car">
 									<h3>Lane Detection with OpenCV</h3>
 									<p>Uses Probabilistic Hough Transform to detect lane lines</p>
-									<p style="margin-left:50px;"><a href="https://github.com/indra4837/lane_detection" class="button">See code</a>
+									<p style="text-align: center;"><a href="https://github.com/indra4837/lane_detection" class="button">See code</a>
 								</li>
 								<li class="icon solid fa-video">
 									<h3>Rosbag Recorder</h3>
 									<p>Records rosbags for blackbox system and automatically uploads rosbag into OneDrive cloud system for easy access</p>
 									<!--<p style="text-align: center;"><a href="#" class="button">See code</a> -->
- 									<p style="margin-left:50px;"><a href="https://github.com/indra4837/rosbag_recorder" class="button">See code</a>
+ 									<p style="text-align: center;"><a href="https://github.com/indra4837/rosbag_recorder" class="button">See code</a>
 								</li>
 							</ul>
 						</div>
