--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/mars.jpg" alt="" /></div><div class="content">
-								<h2>NUS Rover Team<br />
-								<em>Navigation Subteam</em></h2>
+								<h2>NUS Rover Team<br>
+								<em>Navigation and Electrical Subteam</em></h2>
 								<p>Participating in the University Rover Challenge 2021</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/sweeper.png" alt="" /></div><div class="content">
-								<h2>NUS Advanced Robotics Center<br>
+							<div class="image"><img src="images/utown.jpg" alt="" /></div><div class="content">
+								<h2>NUS ARC<br>
 								<em>Software Stack for AV Sweeper</em></h1>
-								<p>Design and develop autonomous driving stack using ROS and C++/Python.
+								<p>Design and develop autonomous driving stack using ROS/NVIDIA Jetson and C++/Python.
 								Integrate different modules such as perception, control and navigation modules into software stack.
 								</p>
 							</div>
