--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="mailto:e0175651@u.nus.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:indra_kurniawan@u.nus.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://github.com/indra4837" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/indra-kurniawan-762aa2180/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://www.instagram.com/kurkur14/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
