Updated portfolio on website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Indra Kurniawan</h2>
-							<p>Robotics Engineer<br />
+							<p>Software Engineer<br />
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -51,7 +51,7 @@
 							<header class="major">
 								<h2>A Mechanical Engineer<br />
 								Experienced in hardware and software development</h2>
-								<p>Interested in areas such as computer vision, control and navigation of Robots<br />
+								<p>Interested in areas such as Artificial Intelligence, Web Development and Embedded Software<br />
 								</p>
 							</header>
 							<ul class="icons major">
@@ -64,6 +64,13 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/eye.jpg" alt="" /></div><div class="content">
+								<h2>TeleMedC<br>
+								<em>Software Engineer</em></h2>
+								<p>Design and develop software for EyeScan machine</p>
+							</div>
+						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/mars.jpg" alt="" /></div><div class="content">
 								<h2>NUS Rover Team<br>
@@ -94,14 +101,18 @@
 						<div class="inner">
 							<header class="major">
 								<h2>My personal projects</h2>
-								<p>These projects encompasses a wide field in Robotics<br />
-								such as Computer Vision, sensor fusion, control and navigation algorithms</p>
+								<p>These projects encompasses a wide field in Software Development<br /></p>
 							</header>
 							<ul class="features">
 								<li class="icon solid fa-camera-retro">
 									<h3>YOLOv4 with TensorRT acceleration</h3>
 									<p>Utilizing YOLOv4 object detector with TensorRT acceleration and integrating it into ROS for real-time object recognition. </p>
 									<p style="text-align: center;"><a href="https://github.com/indra4837/yolov4_trt_ros" class="button">See code</a>
+								</li>
+								<li class="icon solid fa-book">
+									<h3>Django Blog</h3>
+									<p>A blog website deployed using Django backend</p>
+									<p style="text-align: center;"><a href="https://github.com/indra4837/django_blog" class="button">See code</a>
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>System Health Monitoring in ROS</h3>
