--- a/about.html
+++ b/about.html
@@ -46,16 +46,19 @@
 							<div class="inner">
 
 								<h3>Background</h3>
-								<p>My name is Indra Kurniawan, a Mechanical Engineer with an interest in Mobile Robots and all things robotics. To further explore the field of robotics and gain valuable experience, I have done an internship developing an Autonomous Vehicle (AV) and am currently working on an Autonomous Sweeper as my Final Year Project (FYP).</p>
+								<p>My name is Indra Kurniawan, a Software Engineer with an interest in Software Development. In my current iteration, I am exploring Robotics and am looking to gain valuable experience in the field. I have done an internship developing an Autonomous Vehicle (AV) and am currently working on an Autonomous Sweeper as my Final Year Project (FYP).</p>
 
 								<p>I am also part of the NUS Rover team and we will be taking part in the University Rover Challenge 2021.</p>
 								<hr />
 
 								<h3>Interests</h3>
-								<p>Apart from hardware development, I am also interested in developing the software-side of AV such as path planning, control and sensor fusion algorithms. I have done numerous courses online to understand these algorithms better and read articles on their implementation.</p>
+								<p>Apart from software development, I am also interested in developing embedded software and hardware development. I am currently a ceritified Solidworks Associate and am learning 3D printing in my spare time. I have developed my own DIY drone and programmed it using BetaFlight. </p>
 								<hr />
 
-								<h3>Robotics Experience</h3>
+								<h3>Software Development Experience</h3>
+								<h4>TeleMedC</h4>
+								<p>I am currently a Software Engineer in a MedTech startup working on designing and developing software for the EyeScan machine. </p>
+								
 								<h4>NUS Advanced Robotics Center</h4>
 								<p>I am currently working on a year-long project with NUS Advanced Robotics Centre (NUS ARC) to develop the software stack for the Autonomous Sweeper. Its main task is to perform various cleaning processes from point to point. The Sweeper is an adaptation of Karcher’s Industrial Cleaning Robot which requires a human operator. To make it autonomous, we are working on changing it to a drive-by-wire system and using ROS to implement the Autonomous Stack. There are various sensors installed on the sweeper to enable autonomous driving (AD) and most of the development and initial testing is done in Gazebo. We are also planning to conduct trials at NUS University Town in the future to test its AD capabilities.</p>
 
