--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 					<article id="main">
 						<header>
 							<h2>About me</h2>
-							<p>A mechanical engineer with hands-on experience with Robotics</p>
+							<p>A Software Engineer with hands-on experience with Robotics and Web Development</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
