fixed typo in typewriter

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Indra
                     <span class="text-primary">Kurniawan</span>
                 </h1>
-                <h2>I'm <span class="typed" data-typed-items="Developer, Roboticist, Freelancer, Photographer"></span>
+                <h2>I'm a <span class="typed" data-typed-items="Developer, Roboticist, Freelancer, Photographer"></span>
                 </h2>
                 <div class="subheading mb-4 mt-5">
                     Singapore · (65) 9827 5945 ·
