fixed typo in job description

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </li>
                             <li>Review software design and write unit and integration tests for verification and
                                 validation
-                                of software0</li>
+                                of software</li>
 
                         </ul>
                     </div>
